// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders default 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Container-centerAlignItems Container-flex Container-inline"
    >
      <button
        class="MuiButtonBase-root PicassoButton-small PicassoButton-secondaryBlue PicassoButton-root"
        tabindex="0"
        type="button"
      >
        <span
          class="Container-centerAlignItems Container-flex Container-inline PicassoButton-content"
        >
          Prev
        </span>
      </button>
      <button
        class="MuiButtonBase-root PicassoButton-small PicassoButton-secondaryBlue PicassoButton-root Pagination-rangeButton"
        tabindex="0"
        type="button"
      >
        <span
          class="Container-centerAlignItems Container-flex Container-inline PicassoButton-content"
        >
          1
        </span>
      </button>
      <div
        class="Pagination-ellipsis"
      >
        <p
          class="MuiTypography-root Typography-bodySmall Typography-semibold Typography-black MuiTypography-body1"
        >
          ...
        </p>
      </div>
      <button
        class="MuiButtonBase-root PicassoButton-small PicassoButton-secondaryBlue PicassoButton-root Pagination-rangeButton"
        tabindex="0"
        type="button"
      >
        <span
          class="Container-centerAlignItems Container-flex Container-inline PicassoButton-content"
        >
          4
        </span>
      </button>
      <button
        class="MuiButtonBase-root PicassoButton-small PicassoButton-primaryBlue PicassoButton-root Pagination-rangeButton"
        tabindex="0"
        type="button"
      >
        <span
          class="Container-centerAlignItems Container-flex Container-inline PicassoButton-content"
        >
          5
        </span>
      </button>
      <button
        class="MuiButtonBase-root PicassoButton-small PicassoButton-secondaryBlue PicassoButton-root Pagination-rangeButton"
        tabindex="0"
        type="button"
      >
        <span
          class="Container-centerAlignItems Container-flex Container-inline PicassoButton-content"
        >
          6
        </span>
      </button>
      <div
        class="Pagination-ellipsis"
      >
        <p
          class="MuiTypography-root Typography-bodySmall Typography-semibold Typography-black MuiTypography-body1"
        >
          ...
        </p>
      </div>
      <button
        class="MuiButtonBase-root PicassoButton-small PicassoButton-secondaryBlue PicassoButton-root Pagination-rangeButton"
        tabindex="0"
        type="button"
      >
        <span
          class="Container-centerAlignItems Container-flex Container-inline PicassoButton-content"
        >
          20
        </span>
      </button>
      <button
        class="MuiButtonBase-root PicassoButton-small PicassoButton-secondaryBlue PicassoButton-root"
        tabindex="0"
        type="button"
      >
        <span
          class="Container-centerAlignItems Container-flex Container-inline PicassoButton-content"
        >
          Next
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders disabled 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Container-centerAlignItems Container-flex Container-inline"
    >
      <span
        aria-disabled="true"
        class="MuiButtonBase-root PicassoButton-small PicassoButton-secondaryDisabled PicassoButton-root Mui-disabled PicassoButton-disabled"
        role="button"
        tabindex="-1"
      >
        <span
          class="Container-centerAlignItems Container-flex Container-inline PicassoButton-content"
        >
          Prev
        </span>
      </span>
      <span
        aria-disabled="true"
        class="MuiButtonBase-root PicassoButton-small PicassoButton-secondaryDisabled PicassoButton-root Pagination-rangeButton Mui-disabled PicassoButton-disabled"
        role="button"
        tabindex="-1"
      >
        <span
          class="Container-centerAlignItems Container-flex Container-inline PicassoButton-content"
        >
          1
        </span>
      </span>
      <div
        class="Pagination-ellipsis"
      >
        <p
          class="MuiTypography-root Typography-bodySmall Typography-semibold Typography-black MuiTypography-body1"
        >
          ...
        </p>
      </div>
      <span
        aria-disabled="true"
        class="MuiButtonBase-root PicassoButton-small PicassoButton-secondaryDisabled PicassoButton-root Pagination-rangeButton Mui-disabled PicassoButton-disabled"
        role="button"
        tabindex="-1"
      >
        <span
          class="Container-centerAlignItems Container-flex Container-inline PicassoButton-content"
        >
          4
        </span>
      </span>
      <span
        aria-disabled="true"
        class="MuiButtonBase-root PicassoButton-small PicassoButton-primaryDisabled PicassoButton-root Pagination-rangeButton Mui-disabled PicassoButton-disabled"
        role="button"
        tabindex="-1"
      >
        <span
          class="Container-centerAlignItems Container-flex Container-inline PicassoButton-content"
        >
          5
        </span>
      </span>
      <span
        aria-disabled="true"
        class="MuiButtonBase-root PicassoButton-small PicassoButton-secondaryDisabled PicassoButton-root Pagination-rangeButton Mui-disabled PicassoButton-disabled"
        role="button"
        tabindex="-1"
      >
        <span
          class="Container-centerAlignItems Container-flex Container-inline PicassoButton-content"
        >
          6
        </span>
      </span>
      <div
        class="Pagination-ellipsis"
      >
        <p
          class="MuiTypography-root Typography-bodySmall Typography-semibold Typography-black MuiTypography-body1"
        >
          ...
        </p>
      </div>
      <span
        aria-disabled="true"
        class="MuiButtonBase-root PicassoButton-small PicassoButton-secondaryDisabled PicassoButton-root Pagination-rangeButton Mui-disabled PicassoButton-disabled"
        role="button"
        tabindex="-1"
      >
        <span
          class="Container-centerAlignItems Container-flex Container-inline PicassoButton-content"
        >
          20
        </span>
      </span>
      <span
        aria-disabled="true"
        class="MuiButtonBase-root PicassoButton-small PicassoButton-secondaryDisabled PicassoButton-root Mui-disabled PicassoButton-disabled"
        role="button"
        tabindex="-1"
      >
        <span
          class="Container-centerAlignItems Container-flex Container-inline PicassoButton-content"
        >
          Next
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders nothing for 0 pages 1`] = `
<div>
  <div
    class="Picasso-root"
  />
</div>
`;

exports[`renders nothing for 1 page 1`] = `
<div>
  <div
    class="Picasso-root"
  />
</div>
`;
